--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 jobs:
-  build:
+  build-linux:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -13,3 +13,14 @@ jobs:
       - name: Build and Execute
         run: |
           ./build_all.sh
+
+  build-windows:
+    runs-on: windows-2019
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      - name: Build and Execute
+        run: |
+          ./build_all.bat
+
