--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,12 @@ jobs:
         run: |
           ./build_all.sh
 
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: artifact
+          path: Sample_*/build
+
   build-windows:
     runs-on: windows-2019
     steps:
@@ -24,3 +30,9 @@ jobs:
         run: |
           ./build_all.bat
 
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: artifact
+          path: Sample_*/build
+  
