--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1.3.1
+
       - name: Build and Execute
         run: |
           ./build_all.bat
