--- a/Sample_01/CMakeLists.txt
+++ b/Sample_01/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 project(Sample_01)
 
-set(TARGET_EXE out.exe)
+# 実行ファイル名
+# Linux   : out
+# Windows : out.exe
+set(TARGET_EXE out)
 
 add_executable(
     ${TARGET_EXE}
